Fix updates overflow

--- a/src/assets/styles/views/_task-details.scss
+++ b/src/assets/styles/views/_task-details.scss
@@ -180,6 +180,11 @@
                     min-height: 40px;
                     min-width: 40px;
                 }
+
+            }
+
+            p {
+                white-space: normal;
             }
 
             .post-content {
